gcc/testsuite/gfortran.dg/proc_ptr_11.f90
@@ -40,11 +40,11 @@ program bsp
   p2 => p1
   p1 => p2
 
-  p1 => abs   ! { dg-error "Type/kind mismatch in return value" }
-  p2 => abs   ! { dg-error "Type/kind mismatch in return value" }
+  p1 => abs   ! { dg-error "Type/rank mismatch in return value" }
+  p2 => abs   ! { dg-error "Type/rank mismatch in return value" }
 
   p3 => dsin
-  p3 => sin   ! { dg-error "Type/kind mismatch in return value" }
+  p3 => sin   ! { dg-error "Type/rank mismatch in return value" }
 
   contains
 
